Fix Navbar to remove overlapping

--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -9,7 +9,7 @@
   font-family: "Montserrat", sans-serif;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 .navbar {
